<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questions.QuestionOne">

    <TextView
        android:id="@+id/titleQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="64dp"
        android:text="Первый вопрос"
        android:textColor="@color/teal_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="6"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="16dp"
        tools:text="@tools:sample/lorem/random"
        android:textColor="@color/purple_light"
        app:layout_constraintTop_toBottomOf="@+id/titleQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_answer" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_answer" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_answer" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_answer" />
    </RadioGroup>

    <TextView
        android:id="@+id/checkAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_margin="16dp"
        tools:text="@tools:sample/lorem/random"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible" />


    <Button
        android:id="@+id/answerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="64dp"
        android:text="@string/answer_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>